<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="presionaBoton"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/p1btnab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="#9C27B0"
        android:backgroundTint="#E91E63"
        android:text="@string/p1actbasc"
        app:iconTint="#E91E63"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/p1btnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="presionaBoton"
        android:text="@string/p2actparce"
        app:layout_constraintEnd_toEndOf="@+id/p1btnab"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/p1btnab"
        app:layout_constraintTop_toBottomOf="@+id/p1btnab" />

    <Button
        android:id="@+id/p1btnar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="presionaBoton"
        android:text="@string/p1actresp"
        app:layout_constraintEnd_toEndOf="@+id/p1btnap"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/p1btnap"
        app:layout_constraintTop_toBottomOf="@+id/p1btnap" />

    <EditText
        android:id="@+id/p1txtnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p1ingnombre"
        app:layout_constraintEnd_toEndOf="@+id/p1btnar"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/p1btnar"
        app:layout_constraintTop_toBottomOf="@+id/p1btnar" />

    <EditText
        android:id="@+id/p1txtedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p1ingedad"
        app:layout_constraintEnd_toEndOf="@+id/p1txtnombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p1txtnombre"
        app:layout_constraintTop_toBottomOf="@+id/p1txtnombre" />

    <EditText
        android:id="@+id/p1txtcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/p1ingcorreo"
        app:layout_constraintEnd_toEndOf="@+id/p1txtedad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/p1txtedad"
        app:layout_constraintTop_toBottomOf="@+id/p1txtedad" />
</androidx.constraintlayout.widget.ConstraintLayout>